CSS - added api-data class and fixed white space break in widget header

--- a/server/public/CSS/stylesheet.css
+++ b/server/public/CSS/stylesheet.css
@@ -387,7 +387,8 @@ body {
 }
 
 .api-fetcher.error,
-.module-api-fetcher.error {
+.module-api-fetcher.error,
+.api-data.error{
   color: red;
   font-weight: bold;
   transition: color 0.5s ease-in-out, font-weight 0.5s ease-in-out;
@@ -526,10 +527,15 @@ body {
 
     >h1 {
 
-      width: auto;
-      margin: auto 0;
-      padding: 5px;
-    }
+width: auto;
+
+margin: auto 0;
+
+white-space: preserve nowrap;
+
+padding: 5px;
+
+}
 
     >div.top {
       opacity: 0;
